Added support for passing project id and labels upon bucket/file creation
