# swagger.yml
@@ -91,7 +91,7 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/ReadFileRequest'
-      - name: SDSC-DEPLOYMENT-ID
+      - name: Renga-Deployer-Execution
         in: header
         description: 'Deployment id, passed if request made from deployed application'
         type: integer
@@ -118,7 +118,7 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/WriteFileRequest'
-      - name: SDSC-Deployment-Id
+      - name: Renga-Deployer-Execution
         in: header
         description: 'Deployment id, passed if request made from deployed application'
         type: integer
@@ -145,9 +145,14 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/CreateBucketRequest'
-      - name: SDSC-DEPLOYMENT-ID
+      - name: Renga-Deployer-Execution
         in: header
         description: 'Deployment id, passed if request made from deployed application'
+        type: integer
+        format: int64
+      - name: Renga-Projects-Project
+        in: header
+        description: 'Project id, passed to make this bucket part of a project'
         type: integer
         format: int64
       responses:
@@ -179,9 +184,14 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/CreateFileRequest'
-      - name: SDSC-DEPLOYMENT-ID
+      - name: Renga-Deployer-Execution
         in: header
         description: 'Deployment id, passed if request made from deployed application'
+        type: integer
+        format: int64
+      - name: Renga-Projects-Project
+        in: header
+        description: 'Project id, passed to make this file explicitly part of a project'
         type: integer
         format: int64
       responses:
@@ -248,6 +258,10 @@ definitions:
         type: string
         enum:
           - "create_bucket"
+      labels:
+        type: array
+        items:
+          type: string
   CreateFileRequest:
     type: object
     required:
@@ -264,6 +278,10 @@ definitions:
         type: string
         enum:
           - "create_file"
+      labels:
+        type: array
+        items:
+          type: string
   AccessGrant:
     type: object
     required:
